2007-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-track-mouse): New variable.
	(w3m-tab-mouse-position-adjuster): Express the values in pixel
	units rather than the number of characters.
	(w3m-tab-mouse-track-selected-tab): Be controlled by
	w3m-tab-track-mouse; calculate the mouse position in pixel units
	rather than the number of characters.
	(w3m-tab-make-keymap): Make the buffer selected by a tab the
	current buffer before performing w3m-tab-move-(left|right).
	(w3m-tab-separator-map): New keymap.
	(w3m-tab-separator): Use it as the local-map property.
	(w3m-tab-line): Use it as the local-map property in trailing space.

2007-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-unselected-face)
	(w3m-tab-unselected-retrieving-face, w3m-tab-selected-face)
	(w3m-tab-selected-retrieving-face, w3m-tab-mouse-face): Make
	background colors bright.
	(w3m-tab-mouse-position-adjuster): New variable.
	(w3m-tab-mouse-track-selected-tab, w3m-tab-next-buffer)
	(w3m-tab-previous-buffer, w3m-tab-move-right, w3m-tab-move-left):
	New functions.
	(w3m-tab-map): Bind C-wheel-up and C-mouse-4 to w3m-tab-move-left;
	bind C-wheel-down and C-mouse-5 to w3m-tab-move-right; use
	w3m-tab-previous-buffer and w3m-tab-next-buffer instead of
	w3m-previous-buffer and w3m-next-buffer.
	(w3m-tab-separator): Add tab-separator property.

	* w3m.el (w3m-next-buffer): Fix calculation.
	(w3m-lynx-like-map, w3m-info-like-map): Bind `C-c C-,' and `C-c
	C-<' to w3m-tab-move-left, and bind `C-c C-.' and `C-c C->' to
	w3m-tab-move-right for GNU Emacs.

2007-03-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-add-tab-number): New user option.

	* w3m-ems.el (top): Add w3m-add-tab-number to avoid byte-compile
	warnings.
	(w3m-tab-line): Display sequential number on tab title when
	w3m-add-tab-number is not nil.

	* w3m.el (w3m-menubar): Add w3m-session-save and
	w3m-session-select.
	(w3m-tab-button-menu-commands): Ditto.
